src/tests/testfiles/function-declarations/19.txt
testfiles/function-declarations/19.c:2:2: warning: 'return' with a value, in function returning void
 	return 'a';
  ^
testfiles/function-declarations/19.c:12:2: warning: 'return' with a value, in function returning void
 	return 0;
  ^
testfiles/function-declarations/19.c:19:6: error: void value not ignored as it ought to be
 	int a = sum(1, 2);
      ^
testfiles/function-declarations/19.c:24:2: error: incompatible conversion returning 'float' from a function with return type 'int'
 	return 0.0;
  ^
